<resources>
    <string name="app_name">Parque Nacional Purace</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="informacion">
        Declarado por la UNESCO como Reserva de la Biosfera en 1979,
        el Parque Nacional Natural Puracé es una zona volcánica y lo refleja tanto en sus numerosas
        fuentes azufradas como en su nombre, que en lengua quechua significa “montaña de fuego”.
        Allí nacen los principales ríos de Colombia: Magdalena, Cauca, Patía y Caquetá y también 30 lagunas
        tranquilas y claras, ideales para la contemplación. Dentro de su estupendo paisaje se levanta
        la cadena volcánica de los Coconucos, también conocida como Serranía de los Coconucos,
        compuesta por 11 volcanes. De éstos los mas destacados son el Pan de Azúcar (5.000 msnm),
        el Puracé (4.780 msnm) el único activo, y el Coconuco (4.600 msnm). A comienzos de siglo XX,
        toda la Serranía permanecía nevada; actualmente, ni siquiera el cerro más alto, el Pan de Azúcar,
        conserva nieve.
    </string>
    <string name="actividades">
        Actividades Ecoturísticas
    </string>
    <string name="senderismo">
        Senderismo
    </string>



    <string name="txtsenderismo">
        Tiene varios senderos como: Sendero al volcán Puracé (7 km, dificultad media);
        Sendero Orquídeas (800 mts, dificultad muy baja); Sendero Cadena Volcánica (6.5 km, dificultad alta);
        Sendero cascada de San Nicolás (2 km, dificultad media).
    </string>


    <string name="fotografia">
        Fotografia y Video
    </string>


    <string name="txtfotografia">
        Las bellezas escénicas del Parque son el lugar perfecto para esta actividad,
        aunque si las fotos o videos tienen fines comerciales o de publicación se debe solicitar
        un permiso de Parques Nacionales Naturales.
    </string>


    <string name="fauna">
        Observacion de Fauna y Flora Silvestre
    </string>



    <string name="txtfauna">
        Es un lugar perfecto para observar fauna y flora. Se encuentran mamíferos como el oso de anteojos,
        la nutria, el venado conejo, el puma y la danta de paramo. También tiene más de 200 especies de orquídeas,
        lo cual es probablemente una de las características más destacadas del bosque andino del Parque.
    </string>
</resources>
